--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ main {
   height: 100vh;
 }
 
+h2{
+  text-align: center;
+}
+
 ul {
   margin-top: 1rem;
   padding: 0;
@@ -17,37 +21,36 @@ ul {
 }
 
 li {
-  /* position: absolute; */
   overflow-y: 1rem;
   margin: 0 1rem 0 1rem;
 }
 
 /* scroll bar */
 
-/* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #ffffff00;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(0, 0, 0);
   border-radius: 25%;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
 @media (max-height: 700px) {
   ul {
-    height: 15%;
+    position: relative;
+  }
+  main {
+    margin-top: 10%;
+    height: 100%;
   }
 }
 
@@ -56,3 +59,5 @@ li {
     height: 15%;
   }
 }
+
+
